Fix: Unified login system - removed duplicate admin-login.html, added favicons, fixed routing

--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
         },
         {
             "source": "/admin",
-            "destination": "/html/admin-login.html",
+            "destination": "/html/login.html",
             "permanent": true
         }
     ]
